--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ version = project.mod_version
 group = project.maven_group
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
